# multivendor_ecommerce_microservice

./: Authbuild  Dynamicbuild  Productbuild  docker-compose.yml
auth/: Cargo.toml  db.sqlite
auth/src/: common.rs  main.rs  schemas.rs  services.rs  tests.rs  utils.rs
auth/src/db/: business.rs  customer.rs  mod.rs  refresh_token.rs  user.rs
common_service/: Cargo.toml
common_service/src/: lib.rs  schemas.rs
common_service/src/jwt_utils/: mod.rs
product/: .env  Cargo.toml
product/.cargo/: config.toml
product/src/: main.rs  schemas.rs  services.rs
product/src/db/: product.rs
