[profile.release]
strip=true

[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
actix-web = "4.12.0"
sea-orm = {version="2.0.0-rc", features = [
	"sqlx-sqlite", "runtime-tokio-rustls", "macros",
	"schema-sync", "entity-registry"
	]}
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10"
rand = "0.8"


common_service = {path="../common_service"}
